--- a/rails-basics-ru/models/app/views/articles/index.html.erb
+++ b/rails-basics-ru/models/app/views/articles/index.html.erb
@@ -1,6 +1,8 @@
-<h1>Articles#index</h1>
+<h1>Articles</h1>
 
+<ul>
 <% @articles.each do |article| %>
-	<%= link_to article.title, "articles/#{article.id}" %>
+	<li> <%= link_to article.title, "articles/#{article.id}" %> </li>
 <% end %>
+</ul>
 
