--- a/rails-basics-ru/models/app/views/articles/show.html.erb
+++ b/rails-basics-ru/models/app/views/articles/show.html.erb
@@ -1,6 +1,2 @@
-<h1>Articles#show</h1>
-<p>Find me in app/views/articles/show.html.erb</p>
-
-
-<p>Title: <%= @article.title %></p>
-<p>Body: <%= @article.body %></p>
+<h1><%= @article.title %></h1>
+<p><%= @article.body %></p>
